force-app/main/default/objects/MUSW__Application2__c/fields/Avo_90_Day_Planning_Commission_Mtg_Date__c.field-meta.xml
<CustomField>
    <fullName>Avo_90_Day_Planning_Commission_Mtg_Date__c</fullName>
    <label>90 Day Planning Commission Meeting Date</label>
    <type>Date</type>
</CustomField>