force-app/main/default/objects/MUSW__Application2__c/fields/Avo_Description_of_Proposed_Work__c.field-meta.xml
<CustomField>
    <fullName>Avo_Description_of_Proposed_Work__c</fullName>
    <label>Description of Proposed Work</label>
    <type>TextArea</type>
</CustomField>