force-app/main/default/objects/MUSW__Application2__c/fields/Avo_Gross_Sq_Ft_of_Building_Construction__c.field-meta.xml
<CustomField>
    <fullName>Avo_Gross_Sq_Ft_of_Building_Construction__c</fullName>
    <label>Gross Sq Ft of Building Construction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>