force-app/main/default/objects/MUSW__Application2__c/fields/Avo_Number_of_Lots__c.field-meta.xml
<CustomField>
    <fullName>Avo_Number_of_Lots__c</fullName>
    <label>Number of Lots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>