force-app/main/default/objects/MUSW__Application2__c/fields/Avo_Salesforce_File_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Avo_Salesforce_File_Deletion_Date__c</fullName>
    <label>Salesforce File Deletion Date</label>
    <type>Date</type>
</CustomField>