force-app/main/default/objects/MUSW__Application2__c/fields/Avo_Skip_Process_Engine__c.field-meta.xml
<CustomField>
    <fullName>Avo_Skip_Process_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Process Engine</label>
    <type>Checkbox</type>
</CustomField>