force-app/main/default/objects/MUSW__Application2__c/fields/Avo_Skip_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Avo_Skip_Validation_Rules__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Skip Validation Rules</label>
    <type>Checkbox</type>
</CustomField>