force-app/main/default/objects/MUSW__Application2__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>9</scale>
    <type>Location</type>
</CustomField>