force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Address__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to address to which this application is associated with.</description>
    <inlineHelpText>Provide the address that this application is associated with.</inlineHelpText>
    <label>Address</label>
    <referenceTo>MUSW__Address__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>