force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Applicant_Relationship__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Applicant_Relationship__c</fullName>
    <label>Applicant Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Relationship_Types</valueSetName>
    </valueSet>
</CustomField>