force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Application_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Application_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Template</label>
    <referenceTo>MUSW__Application_Template__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>