force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__BG_Bluebeam_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>MUSW__BG_Bluebeam_Project_Id__c</fullName>
    <description>This field stores the ID of the Bluebeam Project that is linked to the Application record.</description>
    <label>Bluebeam Project Id</label>
    <length>11</length>
    <type>Text</type>
</CustomField>