force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Completion_Date__c</fullName>
    <description>Date the application was fully completed/submitted.</description>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>