force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Decision_Date__c</fullName>
    <description>In applications that require approval or hearings, this shows the date that decision was made.</description>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>