force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Eligibility__c</fullName>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Eligibilities</valueSetName>
    </valueSet>
</CustomField>