force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Issued_Number__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Issued_Number__c</fullName>
    <description>The permanent application number.</description>
    <label>Issued No.</label>
    <length>15</length>
    <type>Text</type>
</CustomField>