force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__License_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MUSW__License_Eligibility__c</fullName>
    <description>License Eligibility</description>
    <label>License Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Eligibilities</valueSetName>
    </valueSet>
</CustomField>