force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Object_Record_Type__c</fullName>
    <label>Object Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Object_Record_Types</valueSetName>
    </valueSet>
</CustomField>