force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Occupancy_Limit__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Occupancy_Limit__c</fullName>
    <label>Occupancy Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>