force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Parcel_Owner__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Parcel_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applications (Primary Owner)</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>