force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Permit_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Permit_Work_Type__c</fullName>
    <label>Permit Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Permit_Work_Types</valueSetName>
    </valueSet>
</CustomField>