force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Project2__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Project2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this is a part of a project, the lookup links to the associated project record.</description>
    <label>Project</label>
    <referenceTo>MUSW__Project2__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>