force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Project_Area__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Project_Area__c</fullName>
    <label>Project Area</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>