force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Target_Object_Creation_Template__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Target_Object_Creation_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Object Creation Template</label>
    <referenceTo>MUSW__Template_Object_Mapping__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>