force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Use_Class__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Use_Class__c</fullName>
    <label>Use Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Use_Classes</valueSetName>
    </valueSet>
</CustomField>