force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Use_Group__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Use_Group__c</fullName>
    <label>Use Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Use_Groups</valueSetName>
    </valueSet>
</CustomField>