force-app/main/default/objects/MUSW__Application2__c/fields/MUSW__Use_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Use_Type__c</fullName>
    <label>Use Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Use_Types</valueSetName>
    </valueSet>
</CustomField>