force-app/main/default/objects/MUSW__Application2__c/fields/Plans_Review_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Plans_Review_Application_Type__c</fullName>
    <label>Plans Review Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Avo_Plans_Review_Application_Type</valueSetName>
    </valueSet>
</CustomField>