force-app/main/default/objects/MUSW__Application2__c/recordTypes/Meter_Installation.recordType-meta.xml
<RecordType>
    <fullName>Meter_Installation</fullName>
    <active>true</active>
    <label>Meter Installation</label>
</RecordType>