force-app/main/default/objects/MUSW__Application2__c/listViews/clariti__Online_All_Planning_Applications.listView-meta.xml
<ListView>
    <fullName>clariti__Online_All_Planning_Applications</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Address__c</columns>
    <columns>MUSW__Total_Balance__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MUSW__Applicant__c</columns>
    <columns>MUSW__Phase__c</columns>
    <columns>MUSW__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Online All Planning Applications</label>
</ListView>