force-app/main/default/objects/MUSW__Application2__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Applicant__c</columns>
    <columns>MUSW__Decision_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>