force-app/main/default/objects/MUSW__Application2__c/listViews/Sample.listView-meta.xml
<ListView>
    <fullName>Sample</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Type__c</columns>
    <columns>MUSW__Status__c</columns>
    <columns>MUSW__Parcel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>_Sample</value>
    </filters>
    <label>Sample</label>
</ListView>